--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.1
-loader_version=0.14.21
+	# check these on https://fabricmc.net/develop
+	minecraft_version=1.19.4
+	yarn_mappings=1.19.4+build.2
+	loader_version=0.14.19
 
 # Mod Properties
-mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
+	mod_version = 1.0.0-1.19.4
+	maven_group = net.pdteggman
+	archives_base_name = autodisconnect
 
 # Dependencies
-fabric_version=0.83.0+1.20.1
+	fabric_version=0.79.0+1.19.4
